--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<a href='' target='_blank'>
 								<img src="icons/spotify.png" alt="Spotify">
 							</a>
-							<a href='https://discordapp.com/users/1164214730156683404/'>
+							<a href='https://discord.gg/AyV9b7jZ'>
 								<img src="icons/dis2.png" alt="Roblox">
 							</a>
 						</div>
